Fix rehosting button alignment

--- a/app/stylesheets/shell-window/toolbar-input-group.less
+++ b/app/stylesheets/shell-window/toolbar-input-group.less
@@ -105,10 +105,6 @@
       }
     }
 
-    &.cloud-upload {
-      padding-top: 6px;
-    }
-
     &.star {
       margin: 0;
       padding: 0;
@@ -319,6 +315,7 @@
     }
   }
 
+  .rehost-navbar-menu,
   .bookmark-navbar-menu {
     height: 100%;
   }
